--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <br>
             <br>
             <h1 class="hero__title">PoloCloud</h1>
-            <p class="hero__description">The Minecraft Cloud, that takes you to a completly different experience</p>
+            <p class="hero__description">The Minecraft Cloud, that takes you to an completly different experience</p>
         </div>
         <div class="hero__terminal">
             <pre>
